kubernetes/apps/token-app/token-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: token-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-app
  namespace: token-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: token-app
  template:
    metadata:
      labels:
        app: token-app
    spec:
      containers:
        - name: token-app
          image: docker.io/raghavendrak/token-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: token-app
  namespace: token-app
spec:
  selector:
    app: token-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-app
  namespace: token-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: token-app.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: token-app
                port:
                  number: 80
